--- a/app/globals.css
+++ b/app/globals.css
@@ -70,7 +70,7 @@
   }
 
   .linear-bh {
-    background-image: url("/register.jpeg");
+    background-image: url("/register.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
