fix - front end bugs

--- a/app/globals.css
+++ b/app/globals.css
@@ -63,7 +63,7 @@
   }
 
   .linear-bg {
-    background-image: url("/login.jpeg");
+    background-image: url("/hero1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
